# hse-spb-2023-heroes

./: .gitignore  CMakeLists.txt  LICENSE
client/: CMakeLists.txt
client/include/: TSqueue.hpp  board.hpp  button.hpp  caption.hpp  cell.hpp  client.hpp  config.hpp.in  coordinates.hpp  enum_classes_fwd.hpp  event_manager.hpp  event_manager_fwd.hpp  game.hpp  game_menu_bar.hpp  menu.hpp  menu_button.hpp  popup_window.hpp  resource_manager.hpp  spell.hpp  textbox.hpp  unit.hpp  window.hpp
client/src/: board.cpp  button.cpp  caption.cpp  cell.cpp  client.cpp  coordinates.cpp  event_manager.cpp  game.cpp  game_menu_bar.cpp  main.cpp  menu.cpp  menu_button.cpp  popup_window.cpp  resource_manager.cpp  spell.cpp  textbox.cpp  unit.cpp  window.cpp
proto/: CMakeLists.txt
proto/all_protos/: demo.proto  demo_client.proto
server/: CMakeLists.txt
server/interactors/include/: attack_interactor.hpp  attack_select_interactor.hpp  choose_interactor.hpp  game_bot.hpp  move_interactor.hpp  move_select_interactor.hpp  select_interactor.hpp  spell_interactor.hpp  spell_select_interactor.hpp  update_interactor.hpp
server/interactors/src/: attack_interactor.cpp  attack_select_interactor.cpp  choose_interactor.cpp  move_interactor.cpp  move_select_interactor.cpp  select_interactor.cpp  spell_interactor.cpp  spell_select_interactor.cpp  update_interactor.cpp
server/model/const_game_info/: heroes_list.hpp  spell_list.hpp
server/model/include/: TSqueue.hpp  bfs_state.hpp  board.hpp  bot.hpp  cell.hpp  coordinates.hpp  game.hpp  game_session.hpp  hero.hpp  player.hpp  server.hpp  spell.hpp  unit.hpp  user.hpp
server/model/src/: bfs_state.cpp  board.cpp  cell.cpp  coordinates.cpp  game.cpp  hero.cpp  player.cpp  spell.cpp  unit.cpp
server/model/unit_types/: unit_type1.txt  unit_type2.txt  units.json
server/network/include/: TSqueue.hpp  db_interface.hpp  game_session.hpp  server.hpp
server/src/: game_session.cpp  main.cpp  server.cpp  server.hpp
